verify changes and clean

--- a/web-app/site/verificationFailed.html
+++ b/web-app/site/verificationFailed.html
@@ -8,5 +8,9 @@
 	<p>
 		Verificarion <b>FAILED</b> 
 	</p>
+	
+	<p>
+		<a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;<a href="admin/qr.html">Login</a> 
+	</p>
 </body>
 </html>
