--- a/web-app/site/verified.html
+++ b/web-app/site/verified.html
@@ -8,5 +8,10 @@
 	<p>
 		Your installation is <b>VERIFIED</b> 
 	</p>
+	
+	<p>
+		<a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;<a href="admin/qr.html">Login</a> 
+	</p>
+	
 </body>
 </html>
