--- a/web-app/site/admin/myInstallations.html
+++ b/web-app/site/admin/myInstallations.html
@@ -1,11 +1,235 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-	<script src="js/jquery/2.1.3/jquery.min.js"></script> 
-	<script src="../../js/protocol/entityProtocol.js"></script> 
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="favicon.ico">
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.css" rel="stylesheet">
+<!-- Custom styles for this  template -->
+<link href="css/custom.css" rel="stylesheet">
+<!-- Custom styles for forms -->
+<link href="css/bootstrap-formhelpers.css" rel="stylesheet">
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
-
 <body>
-Hello My Installations!
+<div class="body-bkg"></div>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-bkg"></div>
+    <div class="col-xs-9 col-md-9 col-lg-10 navbar-header navbar-brand"><span class="id">Delivery <strong>al Toque</strong></span></div>
+    <div class="col-xs-3 col-md-3 col-lg-2 nav navbar-nav navbar-right" id="navbar">
+      <div class="row menu-admin small text-center">
+        <div class="col-xs-6 col-sm-6">
+          <form class="form-inline">
+            <label for="lenguage" class="hidden-xs">Country</label>
+            <div class="form-control bfh-selectbox bfh-countries" data-country="US" data-flags="true"></div>
+          </form>
+        </div>
+        <div class="col-xs-6 col-sm-6">
+          <form class="form-inline">
+            <div class="form-group">
+              <label for="lenguage" class="hidden-xs">Lenguage</label>
+              <div class="form-control bfh-selectbox bfh-languages" data-language="en_GB" data-available="en_GB,fr_FR,es_ES,pt_PT" data-flags="true"></div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!--/.nav-collapse --> 
+  </div>
+</nav>
+<div class="container pad15" id="your-installations">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="panel"> 
+        <!-- Default panel contents -->
+        <div class="panel-heading">
+          <h3 class="panel-title">Your <strong>Installations</strong></h3>
+        </div>
+        <!-- content -->
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="panel v-scroll">
+                <table  class="table table-striped table-hover table-move">
+                  <tbody>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/mob-windows.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 <strong>WINDOWS</strong> Phone</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+   						<span class="control-label label label-default">Last Activity <strong>Monday, April 11, 2016</strong></span>
+                        </div>
+                        <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/internet_explorer.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-placement="bottom" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/mob-apple.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 <strong>IPHONE</strong></h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+ <span class="control-label label label-success">Active Now</span>
+                        </div>
+                        <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/chrome.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger disabled" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/mob-android.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 <strong>ANDROID</strong> Phone</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+   						<span class="control-label label label-default">Last Activity <strong>Monday, April 11, 2016</strong></span>
+                        </div>
+                        <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/firefox.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/tablet-apple.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 <strong>IPAD</strong></h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+   						<span class="control-label label label-default">Last Activity <strong>Monday, April 11, 2016</strong></span>
+                        </div>
+                            <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/firefox.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/tablet-android.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 <strong>ANDROID</strong> TABLET</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+   						<span class="control-label label label-default">Last Activity <strong>Monday, April 11, 2016</strong></span>
+                        </div>
+                                                <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/firefox.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                    <tr>
+                      <td><div class="col-xs-3">
+                          <div class="row download-title">
+                            <div class="col-xs-4"><img class="img-responsive center-block" src="img/tablet-windows.svg" title="" alt="img"></div>
+                            <div class="col-xs-8">
+                              <h5>Delivery al Toque Community 1.0 Beta <strong>WINDOWS</strong> Tablet</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-4 pad15">
+   						<span class="control-label label label-default">Last Activity <strong>Today - Wednesday, April 13, 2016</strong></span>
+                        </div>
+                                                <div class="col-xs-4">
+                          <div class="row download-title small">
+                            <div class="col-xs-3"><img class="center-block gray" src="img/firefox.svg" title="" alt="img"></div>
+                            <div class="col-xs-9">
+                              <p>You are <strong>validated</strong> using credentials provided by this specific installation.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xs-1">
+                          <div class="btn-group download-title"><a type="submit" class="btn btn-danger" data-tooltip="tooltip" title="" data-original-title="Remove" data-toggle="modal" data-target="#delete-comunicationModal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a> </div>
+                        </div></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /content --> 
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /container --> 
+<!-- Bootstrap core JavaScript
+================================================== --> 
+<!-- Placed at the end of the document so the pages load faster --> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+<script src="js/bootstrap.min.js"></script> 
+<script src="js/jquery-ui.js"></script> 
+<script src="js/bootstrap-formhelpers.min.js"></script> 
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug --> 
+<script src="js/ie10-viewport-bug-workaround.js"></script> 
+<script src="js/custom.js"></script>
+
 
 
 
