--- a/web-app/site/verified.html
+++ b/web-app/site/verified.html
@@ -1,17 +1,87 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title>Verification OK</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="favicon.ico">
+<!-- Bootstrap core CSS -->
+<link href="admin/css/bootstrap.css" rel="stylesheet">
+<!-- Custom styles for this  template -->
+<link href="admin/css/custom.css" rel="stylesheet">
+<!-- Custom styles for forms -->
+<link href="admin/css/bootstrap-formhelpers.css" rel="stylesheet">
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
 <body>
-	<h1>/DeliveryAlToqueV2/site/verified.html</h1>
-	<HR size="1" noshade="noshade">
-	<p>
-		Your installation is <b>VERIFIED</b> 
-	</p>
-	
-	<p>
-		<a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;<a href="admin/qr.html">Login</a> 
-	</p>
-	
+<div class="body-bkg"></div>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-bkg"></div>
+    <div class="col-xs-9 col-md-9 col-lg-10 navbar-header navbar-brand"><span class="id">Delivery <strong>al Toque</strong></span></div>
+    <div class="col-xs-3 col-md-3 col-lg-2 nav navbar-nav navbar-right" id="navbar">
+      <div class="row menu-admin small text-center">
+        <div class="col-xs-6 col-sm-6">
+          <form class="form-inline">
+            <label for="lenguage" class="hidden-xs">Country</label>
+            <div class="form-control bfh-selectbox bfh-countries" data-country="US" data-flags="true"></div>
+          </form>
+        </div>
+        <div class="col-xs-6 col-sm-6">
+          <form class="form-inline">
+            <div class="form-group">
+              <label for="lenguage" class="hidden-xs">Lenguage</label>
+              <div class="form-control bfh-selectbox bfh-languages" data-language="en_GB" data-available="en_GB,fr_FR,es_ES,pt_PT" data-flags="true"></div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!--/.nav-collapse --> 
+  </div>
+</nav>
+<div class="container-fluid pad15" id="your-installations">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="panel"> 
+        <!-- Default panel contents -->
+        <div class="panel-heading">
+          <h3 class="panel-title">Your <strong>Verification</strong></h3>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-xs-12">
+              <h1>Your installation is <strong>Verified</strong>!!!</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 pad15 text-right"> <a type="submit" class="btn btn-success">Home</a> <a type="submit" class="btn btn-success">Login</a> </div>
+          </div>
+        </div>
+        
+        <!-- /content --> 
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- /container --> 
+<!-- Bootstrap core JavaScript
+================================================== --> 
+<!-- Placed at the end of the document so the pages load faster --> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+<script src="admin/js/bootstrap.min.js"></script> 
+<script src="admin/js/jquery-ui.js"></script> 
+<script src="admin/js/bootstrap-formhelpers.min.js"></script> 
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug --> 
+<script src="admin/js/ie10-viewport-bug-workaround.js"></script> 
+<script src="admin/js/custom.js"></script>
 </body>
 </html>
